Heap - Smallest Range Covering Elements from K Lists - ans